--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.0",
 		"react-native-camera": "^0.12.0",
+		"react-native-image-picker": "^0.26.7",
 		"react-native-vector-icons": "^4.4.2",
-		"react-native-webgl": "^0.7.0"
+		"react-native-volume-slider": "^0.5.0",
+		"react-native-webgl": "^0.7.0",
+		"react-navigation": "^1.0.0-beta.19"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
